guru/finish-line-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finish-line-bot
  namespace: guru
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  selector:
    matchLabels:
      app: finish-line-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: finish-line-bot
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: finish-line-bot
          image: rg.fr-par.scw.cloud/guru/finish-line-bot:latest
