guru/nats-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-producer-deployment
  namespace: guru
spec:
  selector:
    matchLabels:
      app: nats-producer
  replicas: 1
  template:
    metadata:
      labels:
        app: nats-producer
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
      - name: nats-producer
        image: rg.fr-par.scw.cloud/guru/nats-producer
