guru/drone-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
             name: guru-drone
             port:
               number: 80
      host: ci.abhra.shambhala.cloud
  tls:
    - hosts:
      - ci.abhra.shambhala.cloud
      secretName: drone-cert
