guru/flask-helper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-helper-deployment
  namespace: guru
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  selector:
    matchLabels:
      app: flask-helper
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-helper
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
      - name: flask
        image: rg.fr-par.scw.cloud/guru/flask-helper:latest
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-helper-service
  namespace: guru
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: flask-helper
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "bhagwan.abhra.shambhala.cloud"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-helper-service
              port: 
                number: 5000
  tls:
    - hosts: 
        - "bhagwan.abhra.shambhala.cloud"
      secretName: bhagwan-cert
