guru/leaderboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboard-deployment
  namespace: guru
spec:
  selector:
    matchLabels:
      app: leaderboard
  replicas: 1
  template:
    metadata:
      labels:
        app: leaderboard
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
      - name: flask
        image: rg.fr-par.scw.cloud/guru/leaderboard:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: leaderboard-service
  namespace: guru
spec:
  ports:
  - port: 8090
    targetPort: 80
    name: http
  selector:
    app: leaderboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaderboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "skor.abhra.shambhala.cloud"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: leaderboard-service
              port:
                number: 8090
  tls:
    - hosts:
        - "skor.abhra.shambhala.cloud"
      secretName: leaderboard-cert
